# codec-eval

./: .gitignore  CHANGELOG.md  CHANGES.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  DEPENDENCY_ANALYSIS.md  INTEGRATION.md  INVENTORY.md  MIGRATION_EXAMPLE.md  README.md  SESSION_SUMMARY.md  SUMMARY.md  ZEN_PROJECT_ANALYSIS.md  clic_validation_comparison.csv  clic_validation_heuristics.csv  combined_comparison.csv  combined_heuristics.csv  combined_predictions.csv  justfile  kodak_comparison.csv  kodak_heuristics.csv  kodak_predictions.csv  multi_metric_predictions.csv  predictions.csv  predictions_bpp.csv  predictions_v13.csv
.github/workflows/: ci.yml
apidoc/: Cargo.toml
baselines/: avif-baseline.json  avif-qm-bottomup.json  avif-qm-lrf.json  avif-qm-rdotx.json  avif-qm-seg.json  avif-qm-sgr.json  avif-qm-trellis.json  avif-qm.json  jpeg.json
corpus/sharpened-800px/: aq_tuning_results.csv  hybrid_aq_combined.csv  hybrid_butteraugli.csv  hybrid_comparison.csv
crates/codec-compare/: Cargo.toml
crates/codec-compare/docker/: Dockerfile  Dockerfile.simple  docker-compose.yml
crates/codec-compare/src/: analyze_image.rs  brute_force_sweep.rs  build_predictor.rs  compare.rs  find_outliers.rs  full_comparison.rs  image_heuristics.rs  lib.rs  main.rs  quality_predictor.rs  rd_calibrate.rs  rd_compare.rs  registry.rs  report.rs
crates/codec-compare/src/encoders/: avif.rs  jpeg.rs  jpegxl.rs  mod.rs  webp.rs  zenjpeg.rs
crates/codec-eval-cli/: Cargo.toml
crates/codec-eval-cli/src/: main.rs
crates/codec-eval-cli/src/commands/: corpus.rs  import.rs  mod.rs  pareto.rs  sparse.rs  stats.rs
crates/codec-iter/: Cargo.toml
crates/codec-iter/src/: avif_config.rs  baseline.rs  config.rs  eval.rs  gpu.rs  main.rs  source.rs  sweep.rs
docs/: rd-angle.md
docs/public-api/: ABLATION-codec-eval.md  codec-eval.features.txt  codec-eval.internal.txt  codec-eval.txt
examples/: test_icc.rs
plans/: jpegli_aq_sharpened_tuning.md
scripts/: analyze_aq_tuning.py
src/: decode.rs  error.rs  lib.rs  viewing.rs
src/corpus/: category.rs  checksum.rs  discovery.rs  mod.rs  sparse.rs
src/eval/: helpers.rs  mod.rs  report.rs  session.rs
src/import/: mod.rs
src/interpolation/: mod.rs
src/metrics/: butteraugli.rs  dssim.rs  icc.rs  mod.rs  prelude.rs  ssimulacra2.rs  xyb.rs
src/stats/: chart.rs  mod.rs  pareto.rs  rd_knee.rs
tests/: public_api_doc.rs
