[workspace]
members = [".", "crates/codec-eval-cli"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/imazen/codec-eval"
rust-version = "1.85"

[workspace.dependencies]
codec-eval = { path = "." }
thiserror = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
csv = "1.3"
imgref = "1.10"
rgb = "0.8"
dssim-core = "3.2"
ssimulacra2 = "0.5"
butteraugli-oxide = "0.2.1"
rayon = "1.10"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive", "env"] }
tempfile = "3"

[package]
name = "codec-eval"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Image codec comparison and evaluation library"

[dependencies]
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
csv.workspace = true
imgref.workspace = true
rgb.workspace = true
dssim-core.workspace = true
ssimulacra2.workspace = true
butteraugli-oxide.workspace = true
rayon.workspace = true
chrono.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lints.rust]
unsafe_code = "warn"

[lints.clippy]
all = "warn"
pedantic = "warn"
