[package]
name = "codec-compare"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Multi-codec image comparison tool with Pareto analysis"
rust-version = "1.85"

[[bin]]
name = "codec-compare"
path = "src/main.rs"

[[bin]]
name = "find-outliers"
path = "src/find_outliers.rs"

[[bin]]
name = "rd-compare"
path = "src/rd_compare.rs"

[[bin]]
name = "analyze-image"
path = "src/analyze_image.rs"

[[bin]]
name = "full-comparison"
path = "src/full_comparison.rs"

[[bin]]
name = "image-heuristics"
path = "src/image_heuristics.rs"

[[bin]]
name = "build-predictor"
path = "src/build_predictor.rs"

[[bin]]
name = "brute-force-sweep"
path = "src/brute_force_sweep.rs"

[[bin]]
name = "rd-calibrate"
path = "src/rd_calibrate.rs"

[dependencies]
# Core library (with chart and interpolation features for advanced analysis)
codec-eval = { path = "../..", features = ["chart", "interpolation"] }

# Image handling
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
imgref = "1.10"
rgb = "0.8"

# CLI and utilities
clap = { version = "4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2"
rayon = "1.10"
anyhow = "1"
csv = "1.3"
chrono.workspace = true
bytemuck = "1.24"

# Quality metrics
butteraugli.workspace = true
dssim-core.workspace = true
ssimulacra2.workspace = true
fast-ssim2.workspace = true

# JPEG encoders
mozjpeg = { version = "0.10", optional = true }
# jpegli-rs - Google's perceptually-optimized JPEG encoder
jpegli = { package = "jpegli-rs", version = "0.12", optional = true }
# zenjpeg - hybrid mozjpeg/jpegli encoder
zenjpeg = { version = "0.3", optional = true }

# WebP encoder
webp = { version = "0.3", optional = true }

# AVIF encoder (native bindings via ravif for rav1e)
ravif = { version = "0.11", optional = true }
libavif-image = { version = "0.13", optional = true }

# JPEG XL encoder
jpegxl-rs = { version = "0.11", optional = true, default-features = false, features = ["vendored"] }

# For Docker execution
which = "7"

[features]
default = ["jpeg", "webp"]

# Format feature groups
jpeg = ["mozjpeg", "jpegli"]
webp = ["dep:webp"]
avif = ["ravif"]

# Individual encoders
mozjpeg = ["dep:mozjpeg"]
jpegli = ["dep:jpegli"]
zenjpeg = ["dep:zenjpeg"]
ravif = ["dep:ravif"]
jpegxl = ["dep:jpegxl-rs"]

# All encoders
all = ["jpeg", "zenjpeg", "webp", "avif", "jpegxl"]

# Docker-only mode (no native deps, uses CLI tools)
docker-only = []

[dev-dependencies]
tempfile = "3"

[lints.rust]
unsafe_code = "warn"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
# Allow common false positives
missing_errors_doc = "allow"
missing_panics_doc = "allow"
must_use_candidate = "allow"
items_after_statements = "allow"
module_name_repetitions = "allow"
doc_markdown = "allow"
cast_precision_loss = "allow"
cast_possible_truncation = "allow"
cast_sign_loss = "allow"
cast_lossless = "allow"
if_not_else = "allow"
redundant_closure_for_method_calls = "allow"
option_if_let_else = "allow"
map_unwrap_or = "allow"
trivially_copy_pass_by_ref = "allow"
match_same_arms = "allow"
unused_self = "allow"
uninlined_format_args = "allow"
needless_pass_by_value = "allow"
too_many_lines = "allow"
similar_names = "allow"
many_single_char_names = "allow"
