[package]
name = "codec-eval-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "CLI for codec-eval image codec comparison"

[[bin]]
name = "codec-eval"
path = "src/main.rs"

[dependencies]
codec-eval.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
csv.workspace = true
rayon.workspace = true
anyhow = "1.0"

[lints.rust]
unsafe_code = "warn"

[lints.clippy]
all = "warn"
pedantic = "warn"
