[package]
name = "codec-eval-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "CLI for codec-eval image codec comparison"
exclude = [
    "CLAUDE.md",
    "CONTEXT-HANDOFF.md",
    "FEEDBACK.md",
    ".claude/",
    ".superwork/",
    ".zenbench/",
    "copter-report/",
    ".github/",
    "Cross.toml",
    "justfile",
    "Cargo.toml.original.txt",
    "fuzz/",
]

[[bin]]
name = "codec-eval"
path = "src/main.rs"

[dependencies]
codec-eval.workspace = true
codec-eval.path = "../.."
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
csv.workspace = true
rayon.workspace = true
anyhow = "1.0"

[lints.rust]
unsafe_code = "warn"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
missing_errors_doc = "allow"
missing_panics_doc = "allow"
must_use_candidate = "allow"
module_name_repetitions = "allow"
uninlined_format_args = "allow"
too_many_lines = "allow"
cast_precision_loss = "allow"
stable_sort_primitive = "allow"
