[package]
name = "codec-iter"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "Fast codec iteration tool for encoder development"
exclude = [
    "CLAUDE.md",
    "CONTEXT-HANDOFF.md",
    "FEEDBACK.md",
    ".claude/",
    ".superwork/",
    ".zenbench/",
    "copter-report/",
    ".github/",
    "Cross.toml",
    "justfile",
    "Cargo.toml.original.txt",
    "fuzz/",
]

[[bin]]
name = "codec-iter"
path = "src/main.rs"

[dependencies]
fast-ssim2 = { workspace = true , path = "../../../zen/fast-ssim2/fast-ssim2" }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
imgref = { workspace = true }
rgb = { workspace = true }
anyhow = "1"
png = "0.18"
zenbitmaps = { features = ["imgref"] , version = "0.1.3" , git = "https://github.com/imazen/zenbitmaps" }

# JPEG support (optional — depends on zencodecs which needs updated zencodec-types traits)
zencodecs = { features = ["jpeg"], optional = true , version = "0.1.0" , git = "https://github.com/imazen/zencodecs" }
zenjpeg = { optional = true , version = "0.8.2" , git = "https://github.com/imazen/zenjpeg" }

# AVIF support (optional)
ravif = { path = "../../../ravif/ravif", package = "zenravif", default-features = false, features = ["threading"], optional = true , version = "0.1.1" }
zenavif = { optional = true , version = "0.1.3" , git = "https://github.com/imazen/zenavif" }

# GPU-accelerated SSIM2 (optional, requires CUDA)
ssimulacra2-cuda = { optional = true , git = "https://github.com/imazen/ssimulacra2-cuda" }
cudarse-driver = { optional = true , git = "https://github.com/imazen/cudarse-driver" }
cudarse-npp = { features = ["isu"], optional = true , git = "https://github.com/imazen/cudarse-npp" }

[features]
default = ["avif-imazen"]
jpeg = ["dep:zencodecs", "dep:zenjpeg"]
gpu = ["dep:ssimulacra2-cuda", "dep:cudarse-driver", "dep:cudarse-npp"]
avif = ["dep:ravif", "dep:zenavif"]
avif-imazen = ["avif", "ravif/imazen"]

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
missing_errors_doc = "allow"
missing_panics_doc = "allow"
must_use_candidate = "allow"
module_name_repetitions = "allow"
uninlined_format_args = "allow"
cast_precision_loss = "allow"
cast_possible_truncation = "allow"
cast_sign_loss = "allow"
cast_lossless = "allow"
too_many_lines = "allow"
type_complexity = "allow"
default_trait_access = "allow"
redundant_closure_for_method_calls = "allow"
map_unwrap_or = "allow"
